@@ -25,6 +25,7 @@ Changes for 1.9.0
 
 Changes for 1.8.4rc3
 
+ - [ZBX-3270] fixed server crash when processing calculated items with non-numeric user macros (asaveljevs)
  - [ZBXNEXT-564] added new {PROXY.NAME} and {HOSTNAME} macros for auto registration notifications (Sasha)
  - [ZBXNEXT-564] added support of {PROXY.NAME} macro for discovery and trigger notifications (Sasha)
  - [ZBX-3269] fixed processing of vfs.dev.read/write metrics for devices with trailing digits (Sasha)
